--- a/src/app/gurpsy.component.css
+++ b/src/app/gurpsy.component.css
@@ -1,4 +1,10 @@
+md-toolbar {
+  margin-bottom: 12px;
+}
+
 md-toolbar .portrait img {
   -webkit-clip-path: circle(15px at center);
   height: 40px;
 }
+
+
