--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -1,4 +1,4 @@
-<md-sidenav-layout [class.gurpsy-dark]=true>
+<md-sidenav-layout [class.gurpsy-dark]="isDarkTheme">
   <md-sidenav #sidenav>
     <gurpsy-side-navigation (onCloseSideNavigation)="sidenav.close()"></gurpsy-side-navigation>
   </md-sidenav>
@@ -21,10 +21,20 @@
       <md-menu x-position="before" y-position="below" #settings="mdMenu">
         <button md-menu-item (click)="onOpenSheetDialog()">
           <md-icon>add</md-icon>
-          <span>{{ 'MENU.OPEN' | translate }}</span></button>
+          <span>{{ 'MENU.OPEN' | translate }}</span>
+        </button>
+        <button *ngIf="!isDarkTheme" md-menu-item (click)="isDarkTheme = !isDarkTheme">
+          <md-icon>insert_photo</md-icon>
+          <span>{{ 'MENU.DARK_THEME' | translate }}</span>
+        </button>
+        <button *ngIf="isDarkTheme" md-menu-item (click)="isDarkTheme = !isDarkTheme">
+          <md-icon>insert_photo</md-icon>
+          <span>{{ 'MENU.LIGHT_THEME' | translate }}</span>
+        </button>
         <button md-menu-item (click)="onOpenDeleteSettingsDialog()">
           <md-icon>delete</md-icon>
-          <span>{{ 'MENU.CLEAR_SETTINGS' | translate }}</span></button>
+          <span>{{ 'MENU.CLEAR_SETTINGS' | translate }}</span>
+        </button>
       </md-menu>
     </div>
   </md-toolbar>
