--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -39,7 +39,10 @@
     </div>
   </md-toolbar>
 
-  <gurpsy-sheet></gurpsy-sheet>
+  <md-card>
+    <gurpsy-sheet></gurpsy-sheet>
+  </md-card>
+
 </md-sidenav-layout>
 
 
