Added images for day and night mode to the sidenav

--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="closeButton">
       <button md-icon-button (click)="onCloseSideNav()">
-        <md-icon>keyboard_backspace</md-icon>
+        <md-icon>keyboard_arrow_left</md-icon>
       </button>
     </div>
   </div>
