--- a/src/app/components/side-navigation/side-navigation.component.scss
+++ b/src/app/components/side-navigation/side-navigation.component.scss
@@ -1,14 +1,13 @@
 @import "../../../gurpsy-material-theme";
 
-.sideNavigation .sideNavigationHeader {
-  height: 80px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.24);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background: md-color($accent);
-  color: md-color($accent, default-contrast);
-}
+//md-sidenav-layout .sideNavigationHeader {
+//  height: 80px;
+//  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.24);
+//  display: flex;
+//  flex-direction: row;
+//  justify-content: space-between;
+//  color: md-color($accent, default-contrast);
+//}
 
 .sideNavigation .sideNavigationHeader .portrait {
   flex: auto;
