Continued working on getting al styling in place

--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -1,12 +1,13 @@
 <div class="sideNavigation">
   <div class="sideNavigationHeader">
-    <div class="portrait">
-      <img src="assets/images/empty-portrait.png" alt="portrait"/>
-    </div>
+    <div class="transparentOverlay"></div>
     <div class="closeButton">
       <button md-icon-button (click)="onCloseSideNav()">
         <md-icon>keyboard_arrow_left</md-icon>
       </button>
+    </div>
+    <div class="portrait">
+      <img src="assets/images/empty-portrait.png" alt="portrait"/>
     </div>
   </div>
   <div class="sideNavigationBlock">
