--- a/src/gurpsy-styles.scss
+++ b/src/gurpsy-styles.scss
@@ -23,12 +23,11 @@ md-sidenav-layout.gurpsy-dark {
 
 md-sidenav-layout .sideNavigationHeader {
   height: 90px;
+  margin-bottom: 40px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.24);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  color: md-color($accent, default-contrast);
+  color: md-color($primary, default-contrast);
   background: url(assets/images/day.jpg) md-color($accent);
+
 }
 
 md-sidenav-layout.gurpsy-dark .sideNavigationHeader {
