--- a/src/app/components/side-navigation/side-navigation.component.scss
+++ b/src/app/components/side-navigation/side-navigation.component.scss
@@ -23,12 +23,12 @@
 }
 
 
-.sideNavigation .sideNavigationBlock {
+.sideNavigation .sideNavigationContent {
   width: 100%;
   margin: 0px 0px 4px 0px;
 }
 
-.sideNavigation .sideNavigationBlock .sideNavigationBlockContentLine {
+.sideNavigation .sideNavigationContent .sideNavigationContentLine {
   padding: 0px 8px 0px 8px;
   width: 100%;
 }
