--- a/src/gurpsy-styles.scss
+++ b/src/gurpsy-styles.scss
@@ -13,6 +13,10 @@ md-sidenav {
   width: 200px;
 }
 
+md-sidenav .sideNavigationContent .sideNavigationContentLine md-icon {
+  margin-right: 16px;
+}
+
 md-sidenav-layout {
   height: 100%;
 }
