Swapped the home-made-avatar for the material one

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -11,9 +11,8 @@
     <span class="flex-item" fxFlex>{{'APPLICATION'| translate}}
     </span>
 
-    <div class="portrait flex-item" fxShow="false" fxShow.xs>
-      <img src="assets/images/empty-portrait.png" alt="portrait"/>
-    </div>
+    <img class="flex-item" fxShow="false" fxShow.xs md-card-avatar src="assets/images/empty-portrait.png">
+
     <div class="headerSettings flex-item">
       <button md-icon-button [md-menu-trigger-for]="settings">
         <md-icon>more_vert</md-icon>
