--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -6,8 +6,8 @@
         <md-icon>keyboard_arrow_left</md-icon>
       </button>
     </div>
-    <div class="portrait">
-      <img src="assets/images/empty-portrait.png" alt="portrait"/>
+    <div class="avatar">
+      <img md-card-avatar src="assets/images/empty-portrait.png">
     </div>
   </div>
   <div class="sideNavigationContent">
