Style refactoring to sass

--- a/src/app/components/sheet-component/sheet-header-component/description-component/description.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/description-component/description.component.html
@@ -1,4 +1,4 @@
-<div class="sheetComponent description flex-item" fxFlex>
+<div class="sheetComponent flex-item" fxFlex>
   <div class="sheetComponentHeader">
     {{ 'SHEET.DESCRIPTION.DESCRIPTION' | translate }}
   </div>
