--- a/src/app/components/sheet-component/sheet-header-component/description-component/description.component.scss
+++ b/src/app/components/sheet-component/sheet-header-component/description-component/description.component.scss
@@ -1,4 +1,1 @@
-.description {
-  background: var(--sheet-component-body-background-color);
-  color: var(--sheet-data-font-color);
-}
+@import "../../../../../gurpsy-material-theme";
