Wired the model to the view

--- a/src/app/components/sheet-component/sheet-header-component/description-component/description.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/description-component/description.component.html
@@ -3,6 +3,6 @@
     {{ 'SHEET.DESCRIPTION.DESCRIPTION' | translate }}
   </div>
   <div class="sheetComponentBody">
-    Description Body
+    {{sheet.description}}
   </div>
 </div>
