--- a/src/app/components/sheet-component/sheet-header-component/identity-component/identity.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/identity-component/identity.component.html
@@ -9,7 +9,7 @@
          fxLayoutGap="1px"
          fxLayoutWrap="nowrap">
       <label class="flex-item" fxFlex="70px"> {{ 'SHEET.IDENTITY.NAME' | translate }}</label>
-      <span class="flex-item" fxFlex="100%">Dai Blackthorn</span>
+      <span class="flex-item" fxFlex="100%">{{sheet.identity.name}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -17,7 +17,7 @@
          fxLayoutGap="1px"
          fxLayoutWrap="nowrap">
       <label class="flex-item" fxFlex="70px"> {{ 'SHEET.IDENTITY.TITLE' | translate }}</label>
-      <span class="flex-item" fxFlex="100%">Captain</span>
+      <span class="flex-item" fxFlex="100%">{{sheet.identity.title}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -25,7 +25,7 @@
          fxLayoutGap="1px"
          fxLayoutWrap="nowrap">
       <label class="flex-item" fxFlex="70px"> {{ 'SHEET.IDENTITY.RELIGION' | translate }}</label>
-      <span class="flex-item" fxFlex="100%">Atheist</span>
+      <span class="flex-item" fxFlex="100%">{{sheet.identity.religion}}</span>
     </div>
   </div>
 </div>
