--- a/src/app/components/sheet-component/sheet-header-component/points-component/points.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/points-component/points.component.html
@@ -9,7 +9,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.RACE' | translate }}</label>
-      <span class="flex-item">0</span>
+      <span class="flex-item">{{sheet.points.race}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -17,7 +17,7 @@
          fxLayoutAlign="space-between stretch"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.ATTRIBUTES' | translate }}</label>
-      <span class="flex-item">0</span>
+      <span class="flex-item">{{sheet.points.attributes}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -25,7 +25,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.ADVANTAGES' | translate }}</label>
-      <span class="flex-item">0</span>
+      <span class="flex-item">{{sheet.points.advantages}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -33,7 +33,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.DISADVANTAGES' | translate }}</label>
-      <span class="flex-item">0</span>
+      <span class="flex-item">{{sheet.points.disadvantages}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -41,7 +41,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.QUIRKS' | translate }}</label>
-      <span class="flex-item">0</span>
+      <span class="flex-item">{{sheet.points.quirks}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -49,7 +49,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.SKILLS' | translate }}</label>
-      <span class="flex-item">0</span>
+      <span class="flex-item">{{sheet.points.skills}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -57,7 +57,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.SPELLS' | translate }}</label>
-      <span class="flex-item">0</span>
+      <span class="flex-item">{{sheet.points.spells}}</span>
     </div>
     <div class="earned flex-container"
          fxLayout="row"
@@ -65,7 +65,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.EARNED' | translate }}</label>
-      <span class="flex-item">37</span>
+      <span class="flex-item">{{sheet.points.earned}}</span>
     </div>
   </div>
 </div>
