--- a/src/app/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
@@ -9,7 +9,7 @@
          fxLayoutGap="1px"
          fxLayoutWrap="nowrap">
       <label class="flex-item" fxFlex="100px"> {{ 'SHEET.PLAYER_INFORMATION.PLAYER' | translate }}</label>
-      <span class="flex-item" fxFlex="100%">Steve Jackson</span>
+      <span class="flex-item" fxFlex="100%">{{sheet.playerInformation.player}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -17,7 +17,7 @@
          fxLayoutGap="1px"
          fxLayoutWrap="nowrap">
       <label class="flex-item" fxFlex="100px">  {{ 'SHEET.PLAYER_INFORMATION.CAMPAIGN' | translate }}</label>
-      <span class="flex-item" fxFlex="100%">Masters of Mayhem</span>
+      <span class="flex-item" fxFlex="100%">{{sheet.playerInformation.campaign}}</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -25,7 +25,7 @@
          fxLayoutGap="1px"
          fxLayoutWrap="nowrap">
       <label class="flex-item" fxFlex="100px">  {{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</label>
-      <span class="flex-item" fxFlex="100%">Januari 1, 2000</span>
+      <span class="flex-item" fxFlex="100%">{{sheet.playerInformation.creationDate}}</span>
     </div>
   </div>
 </div>
