--- a/src/app/components/dialog-component/open-sheet-dialog/open-sheet-dialog.component.html
+++ b/src/app/components/dialog-component/open-sheet-dialog/open-sheet-dialog.component.html
@@ -1,6 +1,10 @@
 <h1 md-dialog-title> {{'DIALOG.OPEN_SHEET.HEADER'| translate}}</h1>
 
+<md-dialog-content>
+  <input type="file" accept="application/json" (change)="onFileSelect($event)" placeholder="Upload file..."/>
+</md-dialog-content>
+
 <md-dialog-actions>
-  <button md-button color="primary" (click)="onOpenSheet()"> {{'DIALOG.OK'| translate}}</button>
+  <button md-button [disabled]="!sheetSelected" (click)="onLoadSheet()"> {{'DIALOG.OK'| translate}}</button>
   <button md-button md-dialog-close> {{'DIALOG.CANCEL'| translate}}</button>
 </md-dialog-actions>
