Better icon for opening sheets

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -19,7 +19,7 @@
       </button>
       <md-menu x-position="before" y-position="below" #settings="mdMenu">
         <button md-menu-item (click)="onOpenSheetDialog()" class="flex-container">
-          <md-icon class="flex-item">add</md-icon>
+          <md-icon class="flex-item">account_box</md-icon>
           <span class="flex-item" fxFlex="100%">{{ 'MENU.OPEN' | translate }}</span>
         </button>
         <button md-menu-item (click)="onThemeChange()" class="flex-container">
